bmt-jirav/bmt-jirav_v1_Service_jirav.yaml
apiVersion: v1
kind: Service
metadata:
  name: jirav
  namespace: bmt-jirav
spec:
  ports:
  - port: 80
    targetPort: 3001
  selector:
    app: jirav
