bmt-jirav/bmt-jirav_networking.k8s.io-v1_Ingress_jirav-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: jirav-ingress
  namespace: bmt-jirav
spec:
  rules:
  - host: jirav.berkeley.mt
    http:
      paths:
      - backend:
          service:
            name: jirav
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - jirav.berkeley.mt
    secretName: jirav-ingress-tls
